optimization in pagination level of code